--- a/index.html
+++ b/index.html
@@ -14,19 +14,13 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Social links profile</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   </head>
   <body>
     <main role="main">
       <img src="./assets/images/avatar-jessica.jpeg" />
-      <h1>Jessica Randall</h1>
-      <h3>London, United Kingdom</h3>
-      <p>"Front-end developer and avid reader."</p>
+      <h2 id="name">Jessica Randall</h2>
+      <p id="location">London, United Kingdom</p>
+      <p id="bio">"Front-end developer and avid reader."</p>
       <ul role="linklist">
         <li><button href="#">GitHub</button></li>
         <li><button href="#">Frontend Mentor</button></li>
